--- a/application/web/src/styles.css
+++ b/application/web/src/styles.css
@@ -153,3 +153,19 @@ body {
     justify-content: center;
     border-radius: 10px;
 }
+
+.filter-options {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  
+  .filter-dropdown {
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
