--- a/application/web/public/styles.css
+++ b/application/web/public/styles.css
@@ -420,3 +420,50 @@ footer {
     width: 100%; 
     padding-left: 20px;
 }
+
+/* Dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown button styling */
+  .dropdown-button {
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: 1px solid black;
+    background-color: #c0aeae;
+    color: inherit;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f4e6e6;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 10px;
+  }
+  
+  /* Dropdown content links */
+  .dropdown-content a {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 5px;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #b39393;
+  }
+  
+  /* Show dropdown content on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
